--- a/TheWorld/wwwroot/css/site.css
+++ b/TheWorld/wwwroot/css/site.css
@@ -37,7 +37,13 @@ input[type=text], input[type=password], textarea {
     overflow: hidden;
     left: 0;
     margin: 0;
+    transition: left ease .25s;
 }
+
+#sidebar.hide-sidebar {
+        left: -250px;
+        transition: left ease .25s;
+    }
 
 .headshot {
     max-width: 50px;
@@ -63,4 +69,10 @@ menu li a {
 
 #wrapper {
     margin: 0 0 0 250px;
+    transition: margin-left ease .25s;
 }
+
+    #wrapper.hide-sidebar {
+        margin-left: 0;
+        transition: margin-left ease .25s;
+    }
