--- a/TheWorld/Views/App/Index.cshtml
+++ b/TheWorld/Views/App/Index.cshtml
@@ -1,6 +1,4 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
+﻿@model IEnumerable<TheWorld.Models.Trip>
 @{
     ViewBag.Title = "Home Page";
 }
@@ -24,6 +22,12 @@
     </div>
     <div class="col-md-6">
         <h2>The Map</h2>
+        <ul>
+            @foreach(var item in Model)
+            {
+                <li> @item.Name : @item.DateCreated.ToString("d") </li>
+            }
+        </ul>
     </div>
 
 </div>
